# finewiki_mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NOTES  QWEN.md  README.md  TODO  links.sh  main.py  pyproject.toml  run.sh  run_finewiki.sh  test_client.py  test_search.py
.agents/: deno.md  distroless.md  system.md
src/finewiki_mcp/: __init__.py  common.py  indexer.py  searcher.py  server.py  tester.py
