[project]
name = "finewiki-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.26.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "ruff>=0.15.1",
    "tantivy>=0.25.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finewiki_mcp"]

[project.scripts]
finewiki-mcp = "finewiki_mcp.server:main"
